fixed border radius overlap issues

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ body {
   line-height: 1;
 }
 
-textarea{
+textarea {
   background: transparent;
   border: none;
   resize: none;
@@ -27,7 +27,6 @@ textarea{
 
 .time-block{
   text-align: center;
-  border-radius: 15px;
   font-size: 25px;
 }
 
@@ -47,16 +46,20 @@ textarea{
 .past {
   background-color: #d3d3d3;
   color: white;
+  border-radius: 15px;
 }
 
 .present {
   background-color: #ff6961;
   color: white;
+  border-radius: 15px;
+  
 }
 
 .future {
   background-color: #77dd77;
   color: white;
+  border-radius: 15px;
 }
 
 .saveBtn {
@@ -89,7 +92,7 @@ i {
 .clear {
   height: 50px;
   width: 300px;
-  border-radius: 25px;
+  border-radius: 15px;
   background-color: #06AED5;
   padding: 5px;
   color: white;
